<resources>
    <string name="app_name">LinkedOut</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="posts">Posts</string>
    <string name="login">Log In</string>
    <string name="sing_up">Sign Up\n</string>
    <string name="add_post">Add post</string>
    <string name="add_event">Add event</string>
    <string name="author_name">Boris Britva</string>
    <string name="sample_published_date">3 march 1861</string>
    <string name="video_container">Video</string>
    <string name="company_name">Roga and Kopita</string>
    <string name="position">CEO</string>
    <string name="start_date">Start date</string>
    <string name="link_description">Link</string>
    <string name="remove">Remove</string>
    <string name="text_tool">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="events">Events</string>
    <string name="my_profile">My profile</string>
    <string name="edit">Edit</string>
    <string name="link_tool">https://radioiskatel.ru/wp-content/uploads/2018/12/gora-elbrus-6.jpg</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_text">Enter text</string>
    <string name="end_date">End date</string>
    <string name="enter_link">Enter link</string>
    <string name="retry">Retry</string>
    <string name="edit_post">Edit post</string>
    <string name="sign_in">Sign in</string>
    <string name="new_event">New event</string>
    <string name="add_new_job">Add new job</string>
    <string name="edit_event">Edit event</string>
    <string name="edit_job">Edit job</string>
    <string name="edit_text">Edit text</string>
    <string name="till_now">Till niw</string>
</resources>